# InterestPointCorrelationSupportMaterials

./: README.md
Data/Indoors/Straight/: replay.mpg  teach.mpg
Data/Indoors/Turn Right/: replay.mpg  teach.mpg
Data/Outdoors/Direction/: replay.mpg  teach.mpg
Data/Outdoors/Speed/: replay.mpg  teach.mpg
Sources/: build.sh
Sources/src/cight/: CMakeLists.txt  package.xml
Sources/src/cight/include/cight/: shift_reduce.hpp
Sources/src/cight/src/: shift_reduce.cpp
Sources/src/clarus/include/clarus/core/: automata.hpp
Sources/src/cv_video/: CMakeLists.txt  package.xml
Sources/src/cv_video/action/: Command.action  Snapshot.action
Sources/src/cv_video/include/cv_video/: camera.h  camera_server.h  frame.h  operator.h  publisher.h  recorder.h  replayer.h  settings.h  subscriber.h  video.h
Sources/src/cv_video/msg/: Record.msg
Sources/src/cv_video/src/: camcorder.cpp  camera.cpp  camera_server.cpp  frame.cpp  operator.cpp  publisher.cpp  record.cpp  recorder.cpp  replay.cpp  replayer.cpp  settings.cpp  subscriber.cpp  video.cpp
Sources/src/dejavu/: CMakeLists.txt  package.xml
Sources/src/dejavu/config/: experimental.perspective  hrr.perspective  replay.perspective  replay.rviz  saliences.perspective
Sources/src/dejavu/include/dejavu/: averager.h  circular_buffer.h  difference_stream.h  differentiator.h  dispatcher.h  feature_map.h  feature_point.h  feature_selector.h  file_stream.h  filters.h  interpolator.h  settings.h  shift_reduce.h  working_memory.h
Sources/src/dejavu/launch/: difference_images.launch  experiment_differences.launch  experiment_inputs.launch  experiment_spectra.launch  ground_truth.launch  hrr.launch  inspector_matching.launch  inspector_shifts.launch  record_rosbag.launch  replay_debug.launch  replay_hybrid.launch  replay_offline.launch  replay_online.launch  replay_rosbag.launch  replay_simulated.launch  saliences.launch  saliences_debug.launch  teach.launch  teach_debug.launch
Sources/src/dejavu/src/: averager.cpp  difference_camera.cpp  difference_matcher.cpp  difference_stream.cpp  differentiator.cpp  dispatcher.cpp  experiment_differences.cpp  experiment_differences_2.cpp  experiment_differences_3.cpp  experiment_inputs.cpp  experiment_spectra.cpp  feature_map.cpp  feature_point.cpp  feature_selector.cpp  file_stream.cpp  filters.cpp  ground_truth.cpp  hrr.cpp  inspector_matching.cpp  inspector_shifts.cpp  interpolator.cpp  saliences.cpp  settings.cpp  shift_estimator.cpp  shift_reduce.cpp  steering.cpp
Sources/src/yumebros/: CMakeLists.txt  package.xml
Sources/src/yumebros/launch/: demo01_control.launch  demo01_gazebo.launch  empty.launch
Sources/src/yumebros/models/: deploy.sh
Sources/src/yumebros/models/camera_ros/: model-1_4.sdf  model.config
Sources/src/yumebros/models/pioneer2dx_camera_ros/: model-1_4.sdf  model.config
Sources/src/yumebros/models/pioneer2dx_hokuyo_ros/: model-1_4.sdf  model.config  model.sdf
Sources/src/yumebros/models/yamasemi_pole/: model.config
Sources/src/yumebros/models/yamasemi_wall/: model.config
Sources/src/yumebros/models/yumebros_picture/: model-1_4.sdf  model.config
Sources/src/yumebros/models/yumebros_picture/materials/scripts/: picture.material
Sources/src/yumebros/src/: demo01.cpp
Sources/src/yumebros/worlds/: empty.world
