<?xml version="1.0"?>
<package>
  <name>yumebros</name>
  <version>2015.1.0</version>
  <description>Gazebo configuration files and demos for YamabROS</description>
  <license>BSD</license>
  <maintainer email="mail@xperroni.me">Helio Perroni Filho</maintainer>
  <author >Helio Perroni Filho</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>yamabros</build_depend>

  <run_depend>yamabros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>